fix(#332) : purpose enum 받는 방식으로 다시 회귀